// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loadRouteMatches > 1 match with _index.tsx module 1`] = `
[
  {
    "handler": {
      "index": {
        "main": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
      },
      "modules": [
        {
          "id": "_index.tsx",
          "loaded": true,
        },
      ],
      "route": {
        "link": [
          [],
          [],
        ],
        "mod": [
          "_index.tsx",
        ],
        "path": "/",
      },
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
    "isFull": true,
    "location": "/",
    "params": {},
  },
]
`;

exports[`loadRouteMatches > 1 match with _layout.tsx module 1`] = `
[
  {
    "handler": {
      "layout": {
        "main": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
      },
      "modules": [
        {
          "id": "_layout.tsx",
          "loaded": true,
        },
      ],
      "route": {
        "link": [
          [],
          [],
        ],
        "mod": [
          "_layout.tsx",
        ],
        "path": "/",
      },
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
    "isFull": true,
    "location": "/",
    "params": {},
  },
]
`;

exports[`loadRouteMatches > 1 match with no modules 1`] = `
[
  {
    "handler": {
      "modules": [],
      "route": {
        "link": [
          [],
          [],
        ],
        "mod": [],
        "path": "/",
      },
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
    "isFull": true,
    "location": "/",
    "params": {},
  },
]
`;

exports[`loadRouteMatches > no matches 1`] = `[]`;
